force-app/unmanaged/main/default/objects/Contact/fields/FieldNum1__c.field-meta.xml
<CustomField>
    <fullName>FieldNum1__c</fullName>
    <label>数値項目</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>