force-app/unmanaged/main/default/objects/Contact/fields/FieldNum2__c.field-meta.xml
<CustomField>
    <fullName>FieldNum2__c</fullName>
    <label>小数点項目</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>