force-app/unmanaged/main/default/objects/Contact/fields/RichField__c.field-meta.xml
<CustomField>
    <fullName>RichField__c</fullName>
    <label>リッチテキストエリア</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>