force-app/unmanaged/main/default/objects/Contact/fields/TextAreField__c.field-meta.xml
<CustomField>
    <fullName>TextAreField__c</fullName>
    <label>テキストエリア</label>
    <type>TextArea</type>
</CustomField>